--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaDeTarefas">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.TarefaConcluidaActivity" />
+        <activity android:name=".view.EditarTarefaActivity" />
+        <activity android:name=".view.AdicionarTarefaActivity" />
+        <activity android:name=".view.RecuperarSenhaActivity" />
+        <activity android:name=".view.CadastrarActivity" />
+        <activity android:name=".view.AutenticacaoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.MainActivity" />
     </application>
 
 </manifest>
